buildscript {
	repositories {
		mavenCentral()
	}
}

	apply plugin: 'java'
	apply plugin: 'idea'

	version = '0.0.1-SNAPSHOT'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}

	repositories {
		mavenCentral()
	}

	compileJava {
		options.encoding = "UTF-8"
	}

	compileTestJava {
		options.encoding = "UTF-8"
	}

	test {
		useJUnitPlatform()
	}

	clean.doFirst {
		delete "${projectDir}/logs/"
		println "${projectDir}/logs/"

		delete "${projectDir}/out/"
		println "${projectDir}/out/"

		delete "${projectDir}/build/"
		println "${projectDir}/build/"
	}

ext {
	set("springBootVersion", "3.2.5")
}

dependencies {

	implementation('mysql:mysql-connector-java:8.0.33')
	implementation('org.hibernate:hibernate-core:6.5.0.Final')

	implementation("org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion")

	//For calculating execution time
	implementation("com.google.guava:guava:33.4.8-jre")

	//For JSON parsing
	implementation('com.fasterxml.jackson.core:jackson-core:2.14.2')

	compileOnly('org.projectlombok:lombok:1.18.32')
	annotationProcessor('org.projectlombok:lombok:1.18.32')

	testCompileOnly('org.projectlombok:lombok:1.18.32')
	testAnnotationProcessor('org.projectlombok:lombok:1.18.32')

	implementation("org.springframework.boot:spring-boot-starter-web:$springBootVersion")

	testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")

	testImplementation('org.hamcrest:hamcrest:2.2')

	// For correct comparison of JSONs
	testImplementation('uk.org.webcompere:model-assert:1.0.0')

	//
	testImplementation('com.h2database:h2:2.2.224')

	testImplementation('org.junit.jupiter:junit-jupiter-params:5.10.0')

	test {
		useJUnitPlatform()
	}
}